WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298725
[CG] radius of CGGaussianBlurStyle is not in the BaseCTM coordinates
https://bugs.webkit.org/show_bug.cgi?id=298725
Summary
[CG] radius of CGGaussianBlurStyle is not in the BaseCTM coordinates
Said Abou-Hallawa
Reported
2025-09-11 09:39:40 PDT
Created
attachment 476698
[details]
test case 1. Lunch ToT WebKit on a Retina display 2. Enable the internal feature "GraphicsContext Blur Filter Rendering" 3. Open the attached test case. 4. "Disable Full Page Accelerated Drawing" From Debug/Drawing Compositing Flags 5. Compare the display of the accelerated drawing versus the unaccelerated drawing Results: The unaccelerated drawing is incorrect. The blur radius is doubled for unaccelerated drawing. In /299740@main, the radius of the CGGaussianBlurStyle was scaled by the device scale factor as a work around for a CG bug on accelerated drawing. The radius should not be scaled by the device scale factor. In other words it should be in the BaseCTM coordinates. This is the behavior of the unaccelerated drawing. So the workaround should stay for the accelerated drawing only till the CG bug is fixed.
Attachments
test case
(865 bytes, text/html)
2025-09-11 09:39 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-11 09:40:15 PDT
<
rdar://problem/160383014
>
Said Abou-Hallawa
Comment 2
2025-09-11 09:49:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50609
EWS
Comment 3
2025-09-12 11:14:29 PDT
Committed
299903@main
(763d74646247): <
https://commits.webkit.org/299903@main
> Reviewed commits have been landed. Closing PR #50609 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug